cabal-version:      2.4
name:               atcoder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Takegata
maintainer:         39664958+ratmie@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable practiceA
  main-is:          PracticeA.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010

executable abc086a
  main-is:          Abc086A.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010

executable abc081a
  main-is:          Abc081A.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010

executable abc087b
  main-is:          Abc087B.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010

executable abc083b
  main-is:          Abc083B.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010

executable abc088b
  main-is:          Abc088B.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   app
  default-language: Haskell2010
